--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -33,6 +33,16 @@ android {
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
+
+    }
+    lintOptions {
+        // Enable deprecation warnings
+        warningsAsErrors true
+        checkReleaseBuilds true
+
+        // Configure specific lint checks
+        disable 'deprecation'
+        disable 'unchecked'
     }
     kotlinOptions {
         jvmTarget = '1.8'
