--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,9 +55,21 @@ dependencies:
   firebase_core_web: ^2.3.0
   cloud_firestore: ^4.6.0
   firebase_database: ^10.2.1
+
 dev_dependencies:
+  flutter_launcher_icons: ^0.13.1
+  flutter_native_splash: ^2.3.0
   flutter_test:
     sdk: flutter
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "images/asset/11preview.png"
+
+flutter_native_splash:
+  color: "#FFFFFF"
+  image: images/asset/12-removebg-preview.png
+  android_gravity: center
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -93,7 +105,13 @@ flutter:
      - images/asset/desktop-wallpaper-plant-aesthetic-plain-monstera-iphone-thumbnail.png
      - images/asset/1261352.jpg
      - images/asset/logo-512x512-1.png
-
+     - images/asset/11-removebg-preview.png
+     - images/asset/11preview.png
+     - images/asset/12-removebg-preview.png
+     - images/asset/p.png
+     - images/asset/aboutus1.png
+     - images/asset/aboutus2.png
+     - images/asset/11-removebg.png
 
 fonts:
     - family: Raleway
